--- a/omod/src/main/webapp/resources/htmlforms/triage.html
+++ b/omod/src/main/webapp/resources/htmlforms/triage.html
@@ -1,122 +1,293 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<htmlform formUuid="a000cb34-1222-4344-a1c8-f692232f6edd"
-	formName="Triage"
-	formEncounterType="d7151f82-c1f3-4152-a605-2f9ea7414a79"
-	formVersion="0.1">
+<htmlform formUuid="a000cb34-1222-4344-a1c8-f692232f6edd" formName="Triage" formEncounterType="5235f7da-194e-4278-afbd-a473bb430857" formVersion="0.2">
+
+	<script type="text/javascript">
+
+		$(document).ready(function() {
+
+			if (document.getElementById('under-two-months')) {
+				ageUnderTwoMonths = true;
+			}
+			setTriageLevel(ageUnderTwoMonths);
+
+		});
+
+
+		jQuery(function () {
+			jQuery(".myclass").change(function () {
+				setTriageLevel(ageUnderTwoMonths);
+			});
+		});
+
+
+		var ageUnderTwoMonths = false;
+
+
+		function setTriageLevel (ageUnderTwoMonths) {
+
+			var priority = 0;
+			var emergency = 0;
+			var queue = 0;
+
+			if (ageUnderTwoMonths) {
+				jQuery(htmlform).find("#under-two-months-obs").find(":checkbox").attr("checked",true);
+				jQuery(htmlform).find("#under-two-months-obs").find(":checkbox").attr("disabled",true);
+				priority = true;
+			}
+			for (var i = 1 ; i &lt; 15 ; i++ ) { 
+				if (getValue('prio-'+i+'.value') ) { priority = priority + 1};
+			};
+			for (var i = 1; i &lt; 15 ; i++ ) { 
+				if (getValue('em-'+i+'.value') ) { emergency = emergency + 1};
+			};
+
+			if(priority == 0) {priority = null};
+			if(emergency == 0) {emergency = null};
+
+			if ( emergency ) {
+				setValue('triage-level.value', "Emergency");
+			}
+			if ( priority &amp;&amp; !emergency) {
+				setValue('triage-level.value', "Priority");
+			}
+			if (!priority &amp;&amp; !emergency) {
+				setValue('triage-level.value', "Queue");
+			}
+
+		}
+		
+
+
+	</script>
+
+
+
 	<div class="hidden" id="who-when-where">
 		<p id="who">
-			<label> <uimessage code="coreapps.patientDashBoard.provider" />
-			</label> <span> <encounterProvider default="currentUser"
-					required="true" />
+			<label>
+				<uimessage code="coreapps.patientDashBoard.provider" />
+			</label>
+			<span>
+				<encounterProvider default="currentUser" required="true" />
 			</span>
 		</p>
 		<p id="when">
-			<label> <uimessage code="coreapps.patientDashBoard.location" />
-			</label> <span> <encounterLocation
-					default="SessionAttribute:emrContext.sessionLocationId" />
+			<label>
+				<uimessage code="coreapps.patientDashBoard.location" />
+			</label>
+			<span>
+				<encounterLocation default="SessionAttribute:emrContext.sessionLocationId" />
 			</span>
 		</p>
 		<p id="where">
-			<label> <uimessage code="coreapps.patientDashBoard.date" />
-			</label> <span> <encounterDate id="encounterDate" default="now" />
+			<label>
+				<uimessage code="coreapps.patientDashBoard.date" />
+			</label>
+			<span>
+				<encounterDate id="encounterDate" default="now" />
 			</span>
 		</p>
 	</div>
-	
-	<section id="triage" sectionTag="section" headerStyle="title"
-		headerCode="Triage">
+
+	<style type="text/css">
+		table.one {
+			table-layout: fixed;
+			width: 49%;
+			float:left;
+		}
+		table.two {
+			table-layout: fixed;
+			width: 49%;
+			float:right;
+		}
+	</style>
+
+	<section id="triage">
 		<!-- Main Problem fieldset -->
 		<fieldset field-separator=", ">
-			<legend>
-				Main Problem
-				<!--<lookup expression="fn.getConcept('CIEL:5219').name" />-->
-			</legend>
 			<h3>
-				Main Problem
+
 				<!--<lookup expression="fn.getConcept('CIEL:5219').name" />-->
 			</h3>
-			<p>
-				<!-- Display the main problems as checkboxes -->
-				<obs conceptId="CIEL:5219" style="checkbox"
-					answerConceptId="CIEL:140238" />
-			</p>
-			<p>
-				<obs conceptId="CIEL:5219" style="checkbox"
-					answerConceptId="CIEL:143264" />
-			</p>
-			<p>
-				<obs conceptId="CIEL:5219" style="checkbox"
-					answerConceptId="CIEL:142412" />
-			</p>
-			<p>
-				<obs conceptId="CIEL:5219" style="checkbox"
-					answerConceptId="CIEL:122983" />
-			</p>
-			<p>
-				<obs conceptId="CIEL:5219" style="checkbox"
-					answerConceptId="CIEL:151" />
-			</p>
-			<p>
-				<obs conceptId="CIEL:5219" style="checkbox"
-					answerConceptId="CIEL:122496" />
-			</p>
-			<p>
-				<obs conceptId="CIEL:5219" style="checkbox"
-					answerConceptId="CIEL:112234" />
-			</p>
-			<p>
-				<obs conceptId="CIEL:5219" style="checkbox"
-					answerConceptId="CIEL:158420" />
-			</p>
-			<p>
-				<obs conceptId="CIEL:5219" style="checkbox"
-					answerConceptId="CIEL:136443" />
-			</p>
-			<p>
-				<obs conceptId="CIEL:5219" style="checkbox"
-					answerConceptId="CIEL:139084" />
-			</p>
-			<p>
-				<obs conceptId="CIEL:5219" style="checkbox"
-					answerConceptId="CIEL:118876" />
-			</p>
-			<p>
-				<obs conceptId="CIEL:5219" style="checkbox"
-					answerConceptId="CIEL:206" />
-			</p>
-			<p>
-				<!-- And an 'Other' list dropdown -->
-				<obs conceptId="CIEL:5219" labelText="Other"
-					answerClasses="Diagnosis" style="autocomplete" />
-			</p>
+			<table class="one">
+				<thead>
+					<tr>
+						<th>
+							Priority Status
+						</th>
+
+					</tr>
+				</thead>
+				<tbody>
+					<includeIf velocityTest="$fn.patientAgeInMonths() &lt; 2">
+						<tr>
+							<td>
+								<p>
+									<input id="under-two-months" type="checkbox" onclick="return false;" checked="checked" style="display:none;"/>
+									<obs id="under-two-months-obs" conceptId="LFHC:1049" answerConceptId="LFHC:1051" style="checkbox"/>
+									<em>Patient is less than 2 months</em>
+								</p>
+							</td>
+						</tr>
+					</includeIf>
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="prio-1" conceptId="LFHC:1050" answerConceptId="CIEL:5088" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="prio-2" conceptId="LFHC:1050" answerConceptId="CIEL:124193" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="prio-3" conceptId="LFHC:1050" answerConceptId="CIEL:5245" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="prio-4" conceptId="LFHC:1050" answerConceptId="CIEL:114088" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="prio-5" conceptId="LFHC:1050" answerConceptId="CIEL:110598" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="prio-6" conceptId="LFHC:1050" answerConceptId="CIEL:127639" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="prio-7" conceptId="LFHC:1050" answerConceptId="CIEL:116334" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="prio-8" conceptId="LFHC:1050" answerConceptId="CIEL:160338" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="prio-9" conceptId="LFHC:1050" answerConceptId="CIEL:115122" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="prio-10" conceptId="LFHC:1050" answerConceptId="CIEL:460" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="prio-11" conceptId="LFHC:1050" answerConceptId="CIEL:116543" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+
+				</tbody>
+			</table>
+			<table class="two">
+				<thead>
+					<tr>
+						<th>
+							Emergency Status
+						</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="em-1" conceptId="LFHC:1049" answerConceptId="LFHC:1048" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="em-2" conceptId="LFHC:1049" answerConceptId="CIEL:122496" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="em-3" conceptId="LFHC:1049" answerConceptId="CIEL:113948" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="em-4" conceptId="LFHC:1049" answerConceptId="CIEL:144576" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="em-5" conceptId="LFHC:1049" answerConceptId="CIEL:206" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<p>
+								<obs class="myclass" id="em-6" conceptId="LFHC:1049" answerConceptId="CIEL:142630" style="checkbox" /> 
+							</p>
+						</td>
+					</tr>
+
+
+
+				</tbody>
+			</table>
 		</fieldset>
-	
-		<!-- Appearance fieldset -->
-		<fieldset field-separator=", ">
-			<legend>
-				Appearance
-				<!--<lookup expression="fn.getConcept('159640').name" />-->
-			</legend>
+		<fieldset>
+
 			<h3>
-				Appearance
-				<!--<lookup expression="fn.getConcept('159640').name" />-->
+				Suggested triage level
 			</h3>
-			<small>**This will be radio buttons**</small> <br />
 			<p>
-				<obs id="sick" conceptId="CIEL:162741"
-					answerConceptIds="CIEL:1065,CIEL:1066"
-					answerLabels="Very sick,Not very sick" size="3"> <controls>
-				<when value="CIEL:1065" thenDisplay="#very-sick" /> </controls> </obs>
-				<span id="very-sick"> <font color="red"><strong>
-							Take urgently to doctor</strong></font>
-				</span>
+				<obs id="triage-level" conceptId="CIEL:159637" answerConceptIds="CIEL:1882, CIEL:1883, CIEL:1884" answerLabels="Emergency, Priority, Queue" required="true"/>
 			</p>
-			<p>
-				<obs id="cry" conceptId="CIEL:159860"
-					answerConceptIds="CIEL:110540,CIEL:1066"
-					answerLabels="Crying,Not crying" size="3"> </obs>
-			</p>
+
+			<p><font color="red">* required</font></p>
+
 		</fieldset>
+
+
 	</section>
-	<submit/>
-</htmlform>
+
+	<a class="button cancel" >Cancel</a>
+	<submit submitLabel="Save"/>
+
+</htmlform> 	
