--- a/omod/src/main/webapp/resources/htmlforms/diagnosis.html
+++ b/omod/src/main/webapp/resources/htmlforms/diagnosis.html
@@ -1,356 +1,157 @@
-<htmlform formUuid="90344e16-94ff-4ecf-b9c2-71930aab8c67" formName="Diagnosis and Treatment" formEncounterType="3dbd13da-f210-4f20-a5b4-536a92e81474" formVersion="0.1">
+<htmlform formUuid="90344e16-94ff-4ecf-b9c2-71930aab8c67" formName="Diagnosis" formEncounterType="3dbd13da-f210-4f20-a5b4-536a92e81474" formVersion="0.1">
 
-	<script type="text/javascript">
-		if(jQuery){
-			jQuery(document).ready(function(){
-	
-				jQuery('#10-addEntry').remove();
-				for (var i=1 ; i &lt; 10 ; i++) {
-	
-					jQuery("#"+i+"01-removeEntry").remove();
-					jQuery("#"+i+"01-toggleContainer").show();
-				}
-				jQuery('#11-removeEntry').remove();
-				jQuery('#20-addEntry').remove();
-				jQuery('#11-toggleContainer').show();
-	
-			});
-	
-	
-			jQuery(document).ready(function(){
-	
-				jQuery('i.addEntry').live("click", function(){
-					var correctedAddButtonId = parseFloat(this.id) + 1;
-	
-					var contentAddId = "#" + correctedAddButtonId + "-toggleContainer";
-					jQuery(contentAddId).toggle(true);
-					jQuery('#' + this.id).toggle(false); jQuery('#' + parseFloat(this.id) + '-removeEntry').toggle(false);
-					return false;});
-			});
-	
-			jQuery(document).ready(function(){
-				jQuery('i.removeEntry').live("click", function(){
-					var correctedRemoveButtonId = parseFloat(this.id) - 1;
-					var contentAddId = "#" + parseFloat(this.id) + "-toggleContainer";
-					jQuery(contentAddId).toggle(false);
-					jQuery( ':input:not(:button)', contentAddId).val([]);
-					jQuery('#' + correctedRemoveButtonId + '-addEntry').toggle(true); jQuery('#' + correctedRemoveButtonId + '-removeEntry').toggle(true);
-	
-					return false;});
-	
-			});
-		}
-	</script>
-	
-	<div class="hidden" id="who-when-where">
-		<p id="who">
-			<label>
-				<uimessage code="coreapps.patientDashBoard.provider" />
-			</label>
-			<span>
-				<encounterProvider default="currentUser" required="true" />
-			</span>
-		</p>
-		<p id="when">
-			<label>
-				<uimessage code="coreapps.patientDashBoard.location" />
-			</label>
-			<span>
-				<encounterLocation default="SessionAttribute:emrContext.sessionLocationId" />
-			</span>
-		</p>
-		<p id="where">
-			<label>
-				<uimessage code="coreapps.patientDashBoard.date" />
-			</label>
-			<span>
-				<encounterDate id="encounterDate" default="now" />
-			</span>
-		</p>
-	</div>
-	<style type="text/css">
-		.tg {
-			table-layout: fixed;
-			width: 70%;
-			margin-left: 10px;
-		}
-	</style>
-	
-	<section id="diagnosis" sectionTag="section" headerStyle="title" headerCode="Diagnosis">
-		<fieldset field-separator=", ">
-	
-			<legend>Diagnoses</legend>
-			<h3>Diagnoses</h3>
-	
-			<repeat>
-				<template>
-	
-					<div id="{n}-toggleContainer" style="display:none;">
-						<obsgroup groupingConceptId="CIEL:159947">
-							<table class="tg">
-								<tbody>
-									<tr>
-										<td>
-											Diagnosis classification	
-										</td>
-										<td>
-											<p>
-												<obs conceptId="CIEL:159946"/>
-											</p>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											Diagnosis		
-										</td>
-										<td>
-											<p>
-												<obs conceptId="CIEL:1284" answerClasses="Diagnosis" style="autocomplete"/>
-											</p>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											Diagnosis certainty
-										</td>
-										<td>
-											<p>
-												<obs conceptId="CIEL:159394" answerConceptIds="CIEL:159393,CIEL:159392"/>
-											</p>
-										</td>
-	
-									</tr>
-									<tr>
-										<td colspan="2" style="text-align:right;">
-											<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
-											<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
-										</td>
-									</tr>
-								</tbody>
-							</table>
-	
-							<p/>
-							<br/>
-	
-						</obsgroup>
-					</div>
-	
-				</template>
-				<render n="201"/>
-				<render n="202"/>
-				<render n="203"/>
-			</repeat>
-	
-	
-		</fieldset>
-	
-	</section>
-	
-	<section id="treatment" sectionTag="section" headerStyle="title" headerCode="Treatment">
-		<fieldset field-separator=", ">
-	
-	
-			<legend>
-				Lab test order
-			</legend>
-			<h3>Laboratory test order</h3>
-			<repeat>
-				<template>
-					<div id="{n}-toggleContainer" style="display:none;" >
+
+<script type="text/javascript">
+	if(jQuery){
+		jQuery(document).ready(function(){
+
+			jQuery('#10-addEntry').remove();
+			for (var i=1 ; i &lt; 10 ; i++) {
+
+				jQuery("#"+i+"01-removeEntry").remove();
+				jQuery("#"+i+"01-toggleContainer").show();
+			}
+			jQuery('#11-removeEntry').remove();
+			jQuery('#20-addEntry').remove();
+			jQuery('#11-toggleContainer').show();
+
+		});
+
+
+		jQuery(document).ready(function(){
+
+			jQuery('i.addEntry').live("click", function(){
+				var correctedAddButtonId = parseFloat(this.id) + 1;
+
+				var contentAddId = "#" + correctedAddButtonId + "-toggleContainer";
+				jQuery(contentAddId).toggle(true);
+				jQuery('#' + this.id).toggle(false); jQuery('#' + parseFloat(this.id) + '-removeEntry').toggle(false);
+				return false;});
+		});
+
+		jQuery(document).ready(function(){
+			jQuery('i.removeEntry').live("click", function(){
+				var correctedRemoveButtonId = parseFloat(this.id) - 1;
+				var contentAddId = "#" + parseFloat(this.id) + "-toggleContainer";
+				jQuery(contentAddId).toggle(false);
+				jQuery( ':input:not(:button)', contentAddId).val([]);
+				jQuery('#' + correctedRemoveButtonId + '-addEntry').toggle(true); jQuery('#' + correctedRemoveButtonId + '-removeEntry').toggle(true);
+
+				return false;});
+
+		});
+	}
+</script>
+
+
+<div class="hidden" id="who-when-where">
+	<p id="who">
+		<label>
+			<uimessage code="coreapps.patientDashBoard.provider" />
+		</label>
+		<span>
+			<encounterProvider default="currentUser" required="true" />
+		</span>
+	</p>
+	<p id="when">
+		<label>
+			<uimessage code="coreapps.patientDashBoard.location" />
+		</label>
+		<span>
+			<encounterLocation default="SessionAttribute:emrContext.sessionLocationId" />
+		</span>
+	</p>
+	<p id="where">
+		<label>
+			<uimessage code="coreapps.patientDashBoard.date" />
+		</label>
+		<span>
+			<encounterDate id="encounterDate" default="now" />
+		</span>
+	</p>
+</div>
+<style type="text/css">
+	.tg {
+		table-layout: fixed;
+		width: 70%;
+		margin-left: 10px;
+	}
+</style>
+
+<section id="diagnosis" sectionTag="section" headerStyle="title" headerCode="Diagnosis">
+	<fieldset field-separator=", ">
+
+		<legend>Diagnoses</legend>
+		<h3>Diagnoses</h3>
+
+		<repeat>
+			<template>
+
+				<div id="{n}-toggleContainer" style="display:none;">
+					<obsgroup groupingConceptId="CIEL:159947">
+						<table class="tg">
+							<tbody>
+								<tr>
+									<td>
+										Diagnosis classification	
+									</td>
+									<td>
+										<p>
+											<obs conceptId="CIEL:159946"/>
+										</p>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										Diagnosis		
+									</td>
+									<td>
+										<p>
+											<obs conceptId="CIEL:1284" answerClasses="Diagnosis" style="autocomplete"/>
+										</p>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										Diagnosis certainty
+									</td>
+									<td>
+										<p>
+											<obs conceptId="CIEL:159394" answerConceptIds="CIEL:159393,CIEL:159392"/>
+										</p>
+									</td>
+
+								</tr>
+								<tr>
+									<td colspan="2" style="text-align:right;">
+										<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
+										<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+
+
 						<p>
-							<obs id="{n}-order" conceptId="CIEL:1271" answerConceptIds="CIEL:1019,CIEL:953,CIEL:5473,CIEL:161446,LFHC:1125,LFHC:1118,CIEL:300,CIEL:302,CIEL:161445,CIEL:299,CIEL:306,CIEL:887,CIEL:160912,CIEL:160914,CIEL:857,CIEL:790,CIEL:1013,CIEL:159825,CIEL:717,CIEL:848,CIEL:1006,CIEL:1009,CIEL:1299,CIEL:1019,CIEL:5497,CIEL:856,CIEL:730,CIEL:161505,CIEL:161504,CIEL:857,CIEL:790,CIEL:1643,CIEL:159362,CIEL:1040,LFHC:1120,LFHC:1121,LFHC:1122,LFHC:1123,LFHC:1124,CIEL:45,CIEL:307,LFHC:1126,CIEL:161511,CIEL:1327,CIEL:160226,CIEL:159828,CIEL:1007,CIEL:1008,CIEL:161500,CIEL:855,CIEL:159644,CIEL:159644,LFHC:1126,CIEL:161511,CIEL:1327,CIEL:160226,CIEL:159828,CIEL:1007,CIEL:1008,CIEL:161500,CIEL:855,CIEL:159644" style="autocomplete"/>    
-							<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
-							<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
+
+
 						</p>
-					</div>
-				</template>
-				<render n="101"/>
-				<render n="102"/>
-				<render n="103"/>
-				<render n="104"/>
-				<render n="105"/>
-				<render n="106"/>
-				<render n="107"/>
-				<render n="108"/>
-				<render n="109"/>
-	
-			</repeat>
-			<br/>
-			<p>
-	
-				<strong>
-					Please also fill in the Lab Test Order form to order your tests
-				</strong>
-			</p>
-		</fieldset>
-		<fieldset field-separator=", ">
-	
-			<legend>X-ray order</legend>
-			<h3>X-ray order</h3>
-			<repeat>
-				<template>
-					<div id="{n}-toggleContainer" style="display:none;" >
-						<p>
-							<obs id="{n}-order" conceptId="LFHC:1008" answerConceptIds="CIEL:12, CIEL:101, CIEL:386, CIEL:392, CIEL:309, CIEL:161266, CIEL:161267, CIEL:161269, CIEL:161270, CIEL:161272, CIEL:161295, CIEL:161298, CIEL:161299, CIEL:161302, CIEL:161303, CIEL:161305, CIEL:161306, CIEL:161307, CIEL:161317, CIEL:161318, CIEL:161319, CIEL:159600, CIEL:161265, CIEL:161301, CIEL:161320, CIEL:161322, CIEL:161321, CIEL:161324, CIEL:161325, CIEL:161327, CIEL:161329, CIEL:161328, CIEL:161330, CIEL:161332, CIEL:161333, CIEL:161334, CIEL:161337, CIEL:161338, CIEL:161341, CIEL:161342, CIEL:161343, CIEL:161344, CIEL:161345, CIEL:161347, CIEL:161348, CIEL:161349, CIEL:161350" style="autocomplete"/>    
-							<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
-							<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
-						</p>
-					</div>
-				</template>
-				<render n="401"/>
-				<render n="402"/>
-				<render n="403"/>
-				<render n="404"/>
-				<render n="405"/>
-				<render n="406"/>
-				<render n="407"/>
-				<render n="408"/>
-				<render n="409"/>
-	
-			</repeat>
-			<br/>
-			<p>
-				<strong>
-					Please also fill in the X-ray Order form to order your x-rays
-				</strong>
-			</p>
-	
-		</fieldset>
-	
-		<fieldset field-separator=", ">
-	
-			<legend>Ultrasound order</legend>
-			<h3>Ultrasound order</h3>
-			<repeat>
-				<template>
-					<div id="{n}-toggleContainer" style="display:none;" >
-						<p>
-							<obs id="{n}-order" conceptId="LFHC:1009" answerConceptIds="CIEL:845, CIEL:161274, CIEL:161275, CIEL:161276, CIEL:161277, CIEL:161279, CIEL:161280, CIEL:161283, CIEL:161285, CIEL:161288"/>    
-							<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
-							<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
-						</p>
-					</div>
-				</template>
-				<render n="301"/>
-				<render n="302"/>
-				<render n="303"/>
-				<render n="304"/>
-				<render n="305"/>
-				<render n="306"/>
-				<render n="307"/>
-				<render n="308"/>
-				<render n="309"/>
-	
-			</repeat>
-			<br/>
-			<p>
-				<strong>
-					Please also fill in the Ultrasound Order form to order your ultrasounds
-				</strong>
-			</p>
-	
-		</fieldset>
-	
-	
-		<fieldset field-separator=", ">
-	
-			<legend>Procedure</legend>
-			<h3>Procedure</h3>
-			<p>
-				<obs conceptId="160716" rows="4" cols="40"/>
-			</p>
-	
-		</fieldset>
-	
-		<fieldset field-separator=", ">
-	
-			<legend>Medication order</legend>
-			<h3>Medication order</h3>
-			<p>
-				<strong>
-					For IPD, medication to be ordered on the paper form
-				</strong>
-			</p>
-	
-			<p>
-				<strong>
-					For OPD, medication to be ordered on the electronic form: Medication Order
-				</strong>
-			</p>
-			<p>
-				<input type="text" style="display:none;"/>
-			</p>
-	
-	
-		</fieldset>
-	
-		<fieldset field-separator=", ">
-	
-			<legend>IV fluids order</legend>
-			<h3>Intravenous fluids order</h3>
-			<repeat>
-				<template>
-					<div id="{n}-toggleContainer" style="display:none;" >
-						<obsgroup groupingConceptId="LFHC:1055">
-							<p>
-								<obs id="{n}-order" conceptId="LFHC:1054"/>
-							</p>
-							<p>
-								<obs conceptId="CIEL:162745" labelText="Rate of IV fluid per hour: " showUnits="true"/>   
-							</p>
-							<p>
-								<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
-								<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
-							</p>
-							<br/>
-						</obsgroup>
-					</div>
-				</template>
-				<render n="501"/>
-				<render n="502"/>
-				<render n="503"/>
-				<render n="504"/>
-				<render n="505"/>
-				<render n="506"/>
-				<render n="507"/>
-				<render n="508"/>
-				<render n="509"/>
-	
-			</repeat>
-		</fieldset>
-	
-	
-		<fieldset field-separator=", ">
-	
-			<legend>Diet</legend>
-			<h3>Diet</h3>
-	
-			What diet should the patient be eating?
-			<p>
-				<obs id="diet" conceptId="LFHC:1047">
-					<controls>
-						<when value="CIEL:985" thenDisplay="#feeding-plan">
-						</when>
-					</controls>
-				</obs>
-			</p>
-			<br/>
-			<span id="feeding-plan">
-				<obsgroup groupingConceptId="CIEL:162046">
-					<p>
-						Feeding plan:	
-						<obs conceptId="CIEL:985"/>
-					</p>
-					<p>
-						Comments
-						<obs conceptId="CIEL:160632" rows="4" columns="60"/>
-					</p>
-	
-				</obsgroup>
-			</span>
-	
-		</fieldset>
-	</section>
-	
-	<submit/>
+
+						<br/>
+
+					</obsgroup>
+				</div>
+
+			</template>
+			<render n="201"/>
+			<render n="202"/>
+			<render n="203"/>
+		</repeat>
+
+
+	</fieldset>
+
+</section>
+
+<submit/>
 </htmlform>					
