--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -86,7 +86,9 @@
 			Unit
 		</legend>
 		<h3>Unit</h3>
-		<obs conceptId="LFHC:1140"/>
+		<p>
+			<obs conceptId="LFHC:1140"/>
+		</p>
 	</fieldset>
 
 	<fieldset>
@@ -94,7 +96,9 @@
 			Vital Sign Frequency
 		</legend>
 		<h3>Vital Sign Frequency</h3>
-		<obs conceptId="LFHC:1144"/>
+		<p>
+			<obs conceptId="LFHC:1144"/>
+		</p>
 	</fieldset>
 
 	<fieldset field-separator=", ">
@@ -102,27 +106,29 @@
 			Lab test order
 		</legend>
 		<h3>Laboratory test order</h3>
-		<repeat>
-			<template>
-				<div id="{n}-toggleContainer" style="display:none;" >
-					<p>
-						<obs id="{n}-order" conceptId="CIEL:1271" answerConceptIds="CIEL:1019,CIEL:953,CIEL:5473,CIEL:161446,LFHC:1125,LFHC:1118,CIEL:300,CIEL:302,CIEL:161445,CIEL:299,CIEL:306,CIEL:887,CIEL:160912,CIEL:160914,CIEL:857,CIEL:790,CIEL:1013,CIEL:159825,CIEL:717,CIEL:848,CIEL:1006,CIEL:1009,CIEL:1299,CIEL:1019,CIEL:5497,CIEL:856,CIEL:730,CIEL:161505,CIEL:161504,CIEL:857,CIEL:790,CIEL:1643,CIEL:159362,CIEL:1040,LFHC:1120,LFHC:1121,LFHC:1122,LFHC:1123,LFHC:1124,CIEL:45,CIEL:307,LFHC:1126,CIEL:161511,CIEL:1327,CIEL:160226,CIEL:159828,CIEL:1007,CIEL:1008,CIEL:161500,CIEL:855,CIEL:159644,CIEL:159644,LFHC:1126,CIEL:161511,CIEL:1327,CIEL:160226,CIEL:159828,CIEL:1007,CIEL:1008,CIEL:161500,CIEL:855,CIEL:159644" style="autocomplete"/>    
-						<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
-						<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
-					</p>
-				</div>
-			</template>
-			<render n="101"/>
-			<render n="102"/>
-			<render n="103"/>
-			<render n="104"/>
-			<render n="105"/>
-			<render n="106"/>
-			<render n="107"/>
-			<render n="108"/>
-			<render n="109"/>
+		<p>
+			<repeat>
+				<template>
+					<div id="{n}-toggleContainer" style="display:none;" >
+						<p>
+							<obs id="{n}-order" conceptId="CIEL:1271" answerConceptIds="CIEL:1019,CIEL:953,CIEL:5473,CIEL:161446,LFHC:1125,LFHC:1118,CIEL:300,CIEL:302,CIEL:161445,CIEL:299,CIEL:306,CIEL:887,CIEL:160912,CIEL:160914,CIEL:857,CIEL:790,CIEL:1013,CIEL:159825,CIEL:717,CIEL:848,CIEL:1006,CIEL:1009,CIEL:1299,CIEL:1019,CIEL:5497,CIEL:856,CIEL:730,CIEL:161505,CIEL:161504,CIEL:857,CIEL:790,CIEL:1643,CIEL:159362,CIEL:1040,LFHC:1120,LFHC:1121,LFHC:1122,LFHC:1123,LFHC:1124,CIEL:45,CIEL:307,LFHC:1126,CIEL:161511,CIEL:1327,CIEL:160226,CIEL:159828,CIEL:1007,CIEL:1008,CIEL:161500,CIEL:855,CIEL:159644,CIEL:159644,LFHC:1126,CIEL:161511,CIEL:1327,CIEL:160226,CIEL:159828,CIEL:1007,CIEL:1008,CIEL:161500,CIEL:855,CIEL:159644" style="autocomplete"/>    
+							<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
+							<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
+						</p>
+					</div>
+				</template>
+				<render n="101"/>
+				<render n="102"/>
+				<render n="103"/>
+				<render n="104"/>
+				<render n="105"/>
+				<render n="106"/>
+				<render n="107"/>
+				<render n="108"/>
+				<render n="109"/>
 
-		</repeat>
+			</repeat>
+		</p>
 		<br/>
 		<p>
 
@@ -135,27 +141,29 @@
 
 		<legend>X-ray order</legend>
 		<h3>X-ray order</h3>
-		<repeat>
-			<template>
-				<div id="{n}-toggleContainer" style="display:none;" >
-					<p>
-						<obs id="{n}-order" conceptId="LFHC:1008" answerConceptIds="CIEL:12, CIEL:101, CIEL:386, CIEL:392, CIEL:309, CIEL:161266, CIEL:161267, CIEL:161269, CIEL:161270, CIEL:161272, CIEL:161295, CIEL:161298, CIEL:161299, CIEL:161302, CIEL:161303, CIEL:161305, CIEL:161306, CIEL:161307, CIEL:161317, CIEL:161318, CIEL:161319, CIEL:159600, CIEL:161265, CIEL:161301, CIEL:161320, CIEL:161322, CIEL:161321, CIEL:161324, CIEL:161325, CIEL:161327, CIEL:161329, CIEL:161328, CIEL:161330, CIEL:161332, CIEL:161333, CIEL:161334, CIEL:161337, CIEL:161338, CIEL:161341, CIEL:161342, CIEL:161343, CIEL:161344, CIEL:161345, CIEL:161347, CIEL:161348, CIEL:161349, CIEL:161350" style="autocomplete"/>    
-						<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
-						<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
-					</p>
-				</div>
-			</template>
-			<render n="401"/>
-			<render n="402"/>
-			<render n="403"/>
-			<render n="404"/>
-			<render n="405"/>
-			<render n="406"/>
-			<render n="407"/>
-			<render n="408"/>
-			<render n="409"/>
+		<p>
+			<repeat>
+				<template>
+					<div id="{n}-toggleContainer" style="display:none;" >
+						<p>
+							<obs id="{n}-order" conceptId="LFHC:1008" answerConceptIds="CIEL:12, CIEL:101, CIEL:386, CIEL:392, CIEL:309, CIEL:161266, CIEL:161267, CIEL:161269, CIEL:161270, CIEL:161272, CIEL:161295, CIEL:161298, CIEL:161299, CIEL:161302, CIEL:161303, CIEL:161305, CIEL:161306, CIEL:161307, CIEL:161317, CIEL:161318, CIEL:161319, CIEL:159600, CIEL:161265, CIEL:161301, CIEL:161320, CIEL:161322, CIEL:161321, CIEL:161324, CIEL:161325, CIEL:161327, CIEL:161329, CIEL:161328, CIEL:161330, CIEL:161332, CIEL:161333, CIEL:161334, CIEL:161337, CIEL:161338, CIEL:161341, CIEL:161342, CIEL:161343, CIEL:161344, CIEL:161345, CIEL:161347, CIEL:161348, CIEL:161349, CIEL:161350" style="autocomplete"/>    
+							<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
+							<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
+						</p>
+					</div>
+				</template>
+				<render n="401"/>
+				<render n="402"/>
+				<render n="403"/>
+				<render n="404"/>
+				<render n="405"/>
+				<render n="406"/>
+				<render n="407"/>
+				<render n="408"/>
+				<render n="409"/>
 
-		</repeat>
+			</repeat>
+		</p>
 		<br/>
 		<p>
 			<strong>
@@ -169,27 +177,29 @@
 
 		<legend>Ultrasound order</legend>
 		<h3>Ultrasound order</h3>
-		<repeat>
-			<template>
-				<div id="{n}-toggleContainer" style="display:none;" >
-					<p>
-						<obs id="{n}-order" conceptId="LFHC:1009" answerConceptIds="CIEL:845, CIEL:161274, CIEL:161275, CIEL:161276, CIEL:161277, CIEL:161279, CIEL:161280, CIEL:161283, CIEL:161285, CIEL:161288"/>    
-						<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
-						<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
-					</p>
-				</div>
-			</template>
-			<render n="301"/>
-			<render n="302"/>
-			<render n="303"/>
-			<render n="304"/>
-			<render n="305"/>
-			<render n="306"/>
-			<render n="307"/>
-			<render n="308"/>
-			<render n="309"/>
+		<p>
+			<repeat>
+				<template>
+					<div id="{n}-toggleContainer" style="display:none;" >
+						<p>
+							<obs id="{n}-order" conceptId="LFHC:1009" answerConceptIds="CIEL:845, CIEL:161274, CIEL:161275, CIEL:161276, CIEL:161277, CIEL:161279, CIEL:161280, CIEL:161283, CIEL:161285, CIEL:161288"/>    
+							<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
+							<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
+						</p>
+					</div>
+				</template>
+				<render n="301"/>
+				<render n="302"/>
+				<render n="303"/>
+				<render n="304"/>
+				<render n="305"/>
+				<render n="306"/>
+				<render n="307"/>
+				<render n="308"/>
+				<render n="309"/>
 
-		</repeat>
+			</repeat>
+		</p>
 		<br/>
 		<p>
 			<strong>
@@ -236,35 +246,37 @@
 
 		<legend>IV fluids order</legend>
 		<h3>Intravenous fluids order</h3>
-		<repeat>
-			<template>
-				<div id="{n}-toggleContainer" style="display:none;" >
-					<obsgroup groupingConceptId="LFHC:1055">
-						<p>
-							<obs id="{n}-order" conceptId="LFHC:1054"/>
-						</p>
-						<p>
-							<obs conceptId="CIEL:162745" labelText="Rate of IV fluid per hour: " showUnits="true"/>   
-						</p>
-						<p>
-							<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
-							<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
-						</p>
-						<br/>
-					</obsgroup>
-				</div>
-			</template>
-			<render n="501"/>
-			<render n="502"/>
-			<render n="503"/>
-			<render n="504"/>
-			<render n="505"/>
-			<render n="506"/>
-			<render n="507"/>
-			<render n="508"/>
-			<render n="509"/>
+		<p>
+			<repeat>
+				<template>
+					<div id="{n}-toggleContainer" style="display:none;" >
+						<obsgroup groupingConceptId="LFHC:1055">
+							<p>
+								<obs id="{n}-order" conceptId="LFHC:1054"/>
+							</p>
+							<p>
+								<obs conceptId="CIEL:162745" labelText="Rate of IV fluid per hour: " showUnits="true"/>   
+							</p>
+							<p>
+								<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
+								<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
+							</p>
+							<br/>
+						</obsgroup>
+					</div>
+				</template>
+				<render n="501"/>
+				<render n="502"/>
+				<render n="503"/>
+				<render n="504"/>
+				<render n="505"/>
+				<render n="506"/>
+				<render n="507"/>
+				<render n="508"/>
+				<render n="509"/>
 
-		</repeat>
+			</repeat>
+		</p>
 	</fieldset>
 
 
@@ -304,7 +316,9 @@
 			Activity
 		</legend>
 		<h3>Activiy</h3>
-		<obs conceptId="LFHC:1048"/>
+		<p>
+			<obs conceptId="LFHC:1148"/>
+		</p>
 	</fieldset>
 
 	<fieldset>
@@ -312,21 +326,27 @@
 			Weigh daily
 		</legend>
 		<h3>Weigh daily</h3>
-		<obs conceptId="LFHC:1151"/>
+		<p>
+			<obs conceptId="LFHC:1151"/>
+		</p>
 	</fieldset>
 	<fieldset>
 		<legend>
 			Input/ouput
 		</legend>
 		<h3>Record input/ouput</h3>
-		<obs conceptId="LFHC:1152"/>
+		<p>
+			<obs conceptId="LFHC:1152"/>
+		</p>
 	</fieldset>
 	<fieldset>
 		<legend>
 			Monitors
 		</legend>
 		<h3>Monitors required</h3>
-		<obs conceptId="LFHC:1153"/>
+		<p>
+			<obs conceptId="LFHC:1153"/>
+		</p>
 	</fieldset>
 
 	<obsgroup groupingConceptId="LFHC:1156">
@@ -335,46 +355,58 @@
 				Oxygen delivery method
 			</legend>
 			<h3>Oxygen delivery method</h3>
-			<obs conceptId="LFHC:1157"/>
+			<p>
+				<obs conceptId="LFHC:1157"/>
+			</p>
 		</fieldset>
 		<fieldset>
 			<legend>
 				Oxygen delivery rate
 			</legend>
 			<h3>Oxygen delivery rate</h3>
-			<obs conceptId="LFHC:1158"/>
+			<p>
+				<obs conceptId="LFHC:1158"/>
+			</p>
 		</fieldset>
 		<fieldset>
 			<legend>
 				Oxygen saturation goal
 			</legend>
 			<h3>Oxygen saturation goal</h3>
-			<obs conceptId="LFHC:1159"/>
+			<p>
+				<obs conceptId="LFHC:1159"/>
+			</p>
 		</fieldset>
 		<fieldset>
 			<legend>
 				Airway suctioning
 			</legend>
 			<h3>Airway suctioning</h3>
-			<obs conceptId="LFHC:1160"/>
+			<p>
+				<obs conceptId="LFHC:1160"/>
+			</p>
 		</fieldset>
 		<fieldset>
 			<legend>
 				Dressing Changes
 			</legend>
 			<h3>Dressing Changes</h3>
-			<obs conceptId="LFHC:1043"/>
+			<p>
+				<obs conceptId="LFHC:1043"/>
+			</p>
 		</fieldset>
 		<fieldset>
 			<legend>
 				Notify for following
 			</legend>
 			<h3>Notify for following</h3>
-			<obs conceptId="LFHC:1165"/>
+			<p>
+				<obs conceptId="LFHC:1165" rows="4" cols="50"/>
+			</p>
 		</fieldset>
-</obsgroup>
-	</section>
+	</obsgroup>
+</section>
 
-	<submit/>
+<submit/>
 
-	</htmlform>
+</htmlform>
