Adding missing concepts

--- a/omod/src/main/webapp/resources/htmlforms/fluidbalance.html
+++ b/omod/src/main/webapp/resources/htmlforms/fluidbalance.html
@@ -75,7 +75,7 @@
 			Urine
 		</h3>
 		<p>
-			<obs conceptId="CIEL:161929" showUnits="true"/>
+			<obs conceptId="LFHC:1168" showUnits="true"/>
 		</p>
 	</fieldset>
 
@@ -87,7 +87,7 @@
 			Stool
 		</h3>
 		<p>
-			<small>waiting for more Concepts</small>
+			<obs conceptId="LFHC:1169" showUnits="true"/>
 		</p>
 	</fieldset>
 
@@ -111,6 +111,17 @@
 		</h3>
 		<p>
 			<obs conceptId="LFHC:1002" showUnits="true"/>
+		</p>
+	</fieldset>
+		<fieldset>
+		<legend>
+			Other
+		</legend>
+		<h3>
+			Other fluid output
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1170" showUnits="true"/>
 		</p>
 	</fieldset>
 
