adding more concept as Input

--- a/omod/src/main/webapp/resources/htmlforms/fluidbalance.html
+++ b/omod/src/main/webapp/resources/htmlforms/fluidbalance.html
@@ -50,6 +50,28 @@
 			<obs conceptId="LFHC:1005" showUnits="true"/>
 		</p>
 	</fieldset>
+		<fieldset>
+		<legend>
+			Nasogastric
+		</legend>
+		<h3>
+			Nasogastric
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1171" showUnits="true"/>
+		</p>
+	</fieldset>
+		<fieldset>
+		<legend>
+			Intraosseous	
+		</legend>
+		<h3>
+			Intraosseous
+		</h3>
+		<p>
+			<obs conceptId="LFHC:1172" showUnits="true"/>
+		</p>
+	</fieldset>
 
 	<fieldset>
 		<legend>	
