Adding more features in the forms

--- a/omod/src/main/webapp/resources/htmlforms/discharge.html
+++ b/omod/src/main/webapp/resources/htmlforms/discharge.html
@@ -199,7 +199,7 @@
 		<legend>Recommendations</legend>
 		<h3>Discharge recommendations</h3>
 		<p>
-			<obs conceptId="CIEL:162196" rows="4" cols="50"/>
+			<obs conceptId="LFHC:1099" rows="4" cols="50"/>
 		</p>
 	</fieldset>
 	<fieldset field-separator=", ">
@@ -237,7 +237,16 @@
 										Diagnosis certainty
 									</td>
 									<td>
-										<obs conceptId="CIEL:159394" answerConceptIds="CIEL:159393,CIEL:159392"/>
+										<p>
+											<obs conceptId="CIEL:159394" answerConceptIds="CIEL:159393,CIEL:159392"/>
+										</p>
+									</td>
+
+								</tr>
+								<tr>
+									<td colspan="2" style="text-align:right;">
+										<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
+										<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
 									</td>
 								</tr>
 							</tbody>
@@ -245,11 +254,10 @@
 
 
 						<p>
-							
-							
+
+
 						</p>
-						<i id="{n}-addEntry" class="addEntry icon-">&#xf067;</i>
-						<i id="{n}-removeEntry" class="removeEntry icon-">&#xf00d;</i>
+
 						<br/>
 
 					</obsgroup>
