--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -236,6 +236,9 @@
 			</strong>
 		</p>
 		<p>
+			<obs conceptId="LFHC:1176" rows="4" cols="50"/>
+		</p>
+		<p>
 			<input type="text" style="display:none;"/>
 		</p>
 
